# controllers/todos.go
@@ -8,11 +8,10 @@ import (
 	"net/http"
 	"github.com/labstack/echo/v4"
 )
-
 // GetallTodo godoc
 // @Summary      get all todos
 // @Tags         todos
-// @Produce      json
+// @Produce      application/json
 // @Success      200  {object} models.TodoList
 // @Router       /api/todos [get]
 func GetallTodos(c echo.Context) error {
@@ -32,14 +31,16 @@ func GetallTodos(c echo.Context) error {
 		}
 		result.Todos = append(result.Todos, todo)
 	}
-	return c.JSON(http.StatusCreated, result)
+	return c.JSON(http.StatusAccepted, result)
 }
 // GetSingleTodo godoc
 // @Summary      get a single todos
 // @Tags         todos
 // @Produce      application/json
-// @Success      200  {object} 
-// @Router       /api/todos [get]
+// @Param        id path int false "enter a id"
+// @Success      200  {object} models.Todo
+// @Failure      404  string message "id not found"
+// @Router       /api/todos/{id} [get]
 func GetbyId(c echo.Context) error {
 	id := c.Param("id")
 	var db *sql.DB = database.DB()
@@ -48,6 +49,7 @@ func GetbyId(c echo.Context) error {
 	if err != nil {
 		fmt.Println(err)
 	}
+	
 	defer rows.Close()
 	todo := models.Todo{}
 	for rows.Next() {
@@ -55,22 +57,24 @@ func GetbyId(c echo.Context) error {
 		if err2 != nil {
 			return err2
 		}
-
 	}
-	return c.JSON(http.StatusCreated, todo)
+	if todo.Id==0 && todo.Title==""{
+		return c.String(http.StatusNotFound, "id not found")
+	}
+	return c.JSON(http.StatusOK, todo)
 }
 // CreateTodo godoc
 // @Summary      create todo
 // @Description  store a new todo in list
 // @Tags         todos
-// @Param        title body object false  "enter your todo title"
-// @Accept       json
-// @Produce      json
+// @Param        value body models.CreateTodo false  "enter your todo title"
+// @Accept       application/json
+// @Produce      application/json
 // @Success      201  {object} models.Todo
 // @Router       /api/todos/create [post]
 func CreateNewTodo(c echo.Context) error {
 	var db *sql.DB = database.DB()
-	todo := new(models.Todo)
+	todo := new(models.CreateTodo)
 	if err := c.Bind(todo); err != nil {
 		return err
 	}
@@ -93,24 +97,51 @@ func CreateNewTodo(c echo.Context) error {
 	}
 	return c.JSON(http.StatusCreated, restodo)
 }
-
+// UpdateTodo godoc
+// @Summary      update todo
+// @Description  update a todo by its id
+// @Tags         todos
+// @Param        id path int false  "enter id to update"
+// @Param        value body models.UpdateTodo false "enter values"
+// @Accept       application/json 
+// @Produce      application/json
+// @Success      200  {object} models.Todo
+// @Failure      404  string message "id not found" 
+// @Router       /api/todos/update/{id} [patch]
 func UpdateTodo(c echo.Context) error {
 	id := c.Param("id")
 	var db *sql.DB = database.DB()
-	todo := new(models.Todo)
+	todo := new(models.UpdateTodo)
 	if err := c.Bind(todo); err != nil {
 		return err
 	}
-	sqlStatement := "UPDATE todos SET title=$1,iscomplete=$2 WHERE id=$3"
-	_, err := db.Query(sqlStatement, todo.Title,todo.IsComplete,id)
+	sqlStatement := "UPDATE todos SET title=$1,iscomplete=$2 WHERE id=$3 RETURNING title,id,iscomplete"
+	rows, err := db.Query(sqlStatement, todo.Title,todo.IsComplete,id)
 	if err != nil {
 		fmt.Println(err)
-	} else {
-		return c.JSON(http.StatusCreated, "todo updated")
 	}
-	return c.String(http.StatusOK, "ok")
-}
+	defer rows.Close()
+	restodo := models.Todo{}
+	for rows.Next() {
+		err2 := rows.Scan(&restodo.Title, &restodo.Id, &restodo.IsComplete)
+		if err2 != nil {
+			return err2
+		}
 
+	}
+	if restodo.Id==0 && restodo.Title==""{
+		return c.JSON(http.StatusNotFound, "id not found")
+	}
+	return c.JSON(http.StatusAccepted, restodo)
+}
+// DeleteTodo godoc
+// @Summary      delete todo
+// @Description  delete a todo by its id
+// @Tags         todos
+// @Param        id path int false "enter id to update"
+// @Accept       application/json 
+// @Success      200  {object} models.Todo
+// @Router       /api/todos/delete/{id} [delete]
 func DeleteTodo(c echo.Context) error {
 	id := c.Param("id")
 	var db *sql.DB = database.DB()
@@ -119,7 +150,7 @@ func DeleteTodo(c echo.Context) error {
 	if err != nil {
 		fmt.Println(err)
 	} else {
-		return c.JSON(http.StatusCreated, "todo deleted")
+		return c.JSON(http.StatusAccepted, "todo deleted")
 	}
 	return c.String(http.StatusOK, "ok")
 }
