# models/todos.go
@@ -9,3 +9,12 @@ type Todo struct {
 type TodoList struct {
 	Todos []Todo `json:"TodoList"`
 }
+
+type CreateTodo struct {
+	Title      string `json:"title"`
+}
+
+type UpdateTodo struct {
+	Title      string `json:"title"`
+	IsComplete bool   `json:"complete"`
+}
